# cattree

./: .gitignore  LICENSE  README.md  pyproject.toml
cattree/: cattree.py  cli.py  gitignore_parsing.py
