[project]
name = "cattree"
version = "0.1.0"
description = "A tree + cat combo: view directory structure with file contents in one command"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["typer>=0.15.1"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
cattree = "cattree.cli:app"
